[gd_scene load_steps=5 format=3 uid="uid://bon4ra7j6mcka"]

[ext_resource type="Script" path="res://Scenes/Entities/volo.gd" id="1_1dm2q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_alsdp"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dqvef"]

[sub_resource type="BoxMesh" id="BoxMesh_avb3a"]

[node name="Volo" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1dm2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_alsdp")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_dqvef")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0.969352, 0.56026, 0.521406, 1)
position = Vector2(1.90735e-06, 0)
scale = Vector2(18.5, 13.5)
mesh = SubResource("BoxMesh_avb3a")

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
